# aocl-libm-ose

./: CMakeLists.txt
gtests/: CMakeLists.txt
src/fast/: expf.c
